chore: remove unnecessary request time cost
